[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"
authors = ["TS McNamara, <author@rustinaction.com"]

[dependencies]
bincode = "1"
crc = "1.7"
byteorder = "1.2"
serde = "1"
serde_derive = "1"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"