[package]
name = "clock3"
version = "0.1.3"
edition = "2021"
authors = ["Tim McNamara <author@rustinaction.com>"]

[dependencies]
byteorder = "1"
chrono = "0.4"
clap = "2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"